# hachiue-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  migrate_db.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
api/: main.py
app/: db.py  main.py
app/cruds/: character.py  home.py  plant.py  timeline.py  user.py
app/func/: classification_plant.py  data_func.py  get_ftp_data.py  img_func.py
app/models/: model.py
app/routers/: character.py  home.py  plant.py  timeline.py  user.py
app/schemas/: character.py  plant.py  timeline.py  user.py
eisei/: H08_20211216_1940_rFL010_FLDK.02701_02601.nc
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
